--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: social_image_share
 description: A new Flutter project.
 version: 0.0.1
-homepage:
+
 
 environment:
-  sdk: ">=2.17.0-102.0.dev <3.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=2.16.1 <3.0.0"
+  flutter: ">=2.10.3"
 
 dependencies:
   flutter:
